styles/components/contactManagement.module.css
.container {
  width: 90%;
  height: 90%;
}

.header {
  font-size: 12px;
  font-weight: 600;
  width: 100%;
  height: 2em;
  display: flex;
  align-items: center;
  box-sizing: border-box;
  padding-left: 10px;
  border: 2px solid black;
  border-bottom: none;
}

.table__container {
  font-size: 14px;
  width: 100%;
  height: 26.2em;
  border: 2px solid black;
}

.table {
  width: 100%;
  border-spacing: 0px;
  font-size: 14px;
}

.table__head {
  background-color: #cccccc !important;
  padding: 0%;
}

.table__row {
  padding: 0%;
}

.table__cell {
  border-left: 2px solid black;
  height: 2em;
}

.pagination {
  margin-top: 15px;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.6em;
}

.back {
  height: 100%;
  width: 3em;
  font-size: 12px;
  border-right: 2px solid black;
  border-left: none;
  cursor: pointer;
  padding: 0%;
}

